WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116514
New Flickr doesn't get fast scrolling but should
https://bugs.webkit.org/show_bug.cgi?id=116514
Summary
New Flickr doesn't get fast scrolling but should
Simon Fraser (smfr)
Reported
2013-05-20 22:43:53 PDT
We don't get fast scrolling on the new Flickr pages, e.g. <
http://www.flickr.com/photos/smfr/
> During loading, there's a background-attachment:fixed that kicks us out. However, when loading is complete this fixed background is removed, but we fail to go into fast scrolling mode. <
rdar://problem/13946443
>
Attachments
Patch
(13.35 KB, patch)
2013-05-20 23:09 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-05-20 23:09:17 PDT
Created
attachment 202379
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-20 23:10:44 PDT
Attachment 202379
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling-background-toggle-expected.txt', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling-background-toggle.html', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling-expected.txt', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling-hidden-background-toggle-expected.txt', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling-hidden-background-toggle.html', u'LayoutTests/platform/mac-wk2/tiled-drawing/slow-scrolling.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderObject.cpp']" exit_code: 1 Source/WebCore/rendering/RenderObject.cpp:133: Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2013-05-20 23:13:32 PDT
Style bot complaint is existing code.
Darin Adler
Comment 4
2013-05-21 08:47:31 PDT
Comment on
attachment 202379
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202379&action=review
> Source/WebCore/rendering/RenderObject.cpp:130 > + UNUSED_PARAM(frameView);
Seems wrong to have this UNUSED_PARAM be unconditional, when the use of the parameter is conditional.
>> Source/WebCore/rendering/RenderObject.cpp:133 >> +#if PLATFORM(QT) > > Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5]
I don’t think the style bot is being helpful here.
> Source/WebCore/rendering/RenderObject.cpp:2490 > + if (view()->frameView()) {
I think we should put the FrameView into a local because it’s used two more times below and the code would be more concise without repeating it.
> Source/WebCore/rendering/RenderObject.cpp:2491 > + bool repaintFixedBackgroundsOnScroll = shouldRepaintFixedBackgroundsOnScroll(view()->frameView());
Why the local variable here? I think it makes the code harder to read.
Simon Fraser (smfr)
Comment 5
2013-05-21 08:57:02 PDT
(In reply to
comment #4
)
> (From update of
attachment 202379
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=202379&action=review
> > > Source/WebCore/rendering/RenderObject.cpp:130 > > + UNUSED_PARAM(frameView); > > Seems wrong to have this UNUSED_PARAM be unconditional, when the use of the parameter is conditional.
I thought it was simpler than having the UNUSED_PARAM inside an #else; it's harmless to have it when the param is actually used, but I can clean this up.
> > Do not add platform specific code in WebCore outside of platform. [build/webcore_platform_layering_violation] [5] > > I don’t think the style bot is being helpful here.
Agreed!
> > Source/WebCore/rendering/RenderObject.cpp:2490 > > + if (view()->frameView()) { > > I think we should put the FrameView into a local because it’s used two more times below and the code would be more concise without repeating it.
Will do.
> > Source/WebCore/rendering/RenderObject.cpp:2491 > > + bool repaintFixedBackgroundsOnScroll = shouldRepaintFixedBackgroundsOnScroll(view()->frameView()); > > Why the local variable here? I think it makes the code harder to read.
I can remove this. Simon
Simon Fraser (smfr)
Comment 6
2013-05-22 12:06:07 PDT
https://trac.webkit.org/r150529
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug