New Flickr doesn't get fast scrolling but should https://bugs.webkit.org/show_bug.cgi?id=116514

Source/WebCore:

Reviewed by Darin Adler.

RenderObject increments and decrements a counter of slow repaint objects on
FrameView when it sees style changes related to background-attachment:fixed.
However, it omitted to decrement the count when a renderer with a fixed background
was destroyed.

This caused Flickr to never fall into fast scrolling mode, since it toggled
display:none on an element with a fixed background during loading, then removed
the fixed background.

Did some minor cleanup of #ENABLE(FAST_MOBILE_SCROLLING) crap.

Tests: platform/mac-wk2/tiled-drawing/slow-scrolling-background-toggle.html
       platform/mac-wk2/tiled-drawing/slow-scrolling-hidden-background-toggle.html
       platform/mac-wk2/tiled-drawing/slow-scrolling.html

* rendering/RenderObject.cpp:
(WebCore::shouldRepaintFixedBackgroundsOnScroll):
(WebCore::RenderObject::styleWillChange):
(WebCore::RenderObject::willBeRemovedFromTree):

LayoutTests:

Reviewed by Darin Adler.

slow-scrolling-hidden-background-toggle.html actually tests this patch. The other
two tests were added because there appear to be no tests for basic internals.mainThreadScrollingReasons()
functionality.

* platform/mac-wk2/tiled-drawing/slow-scrolling-background-toggle-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/slow-scrolling-background-toggle.html: Added.
* platform/mac-wk2/tiled-drawing/slow-scrolling-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/slow-scrolling-hidden-background-toggle-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/slow-scrolling-hidden-background-toggle.html: Added.
* platform/mac-wk2/tiled-drawing/slow-scrolling.html: Added.

Canonical link: https://commits.webkit.org/134927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150529 268f45cc-cd09-0410-ab3c-d52691b4dbfc